--- a/client/css/droppable.css
+++ b/client/css/droppable.css
@@ -16,6 +16,16 @@
 .drop-list {
     list-style-type: none;
     padding-left: 0;
+    margin-bottom: 0;
+}
+
+.form-group.droppable {
+    padding-bottom: 0;
+    margin-bottom: 0;
+}
+
+.form-group.droppable::after {
+    border-bottom: none;
 }
 
 /* .drop-list li {
